--- a/package.json
+++ b/package.json
@@ -9,12 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "next": "13.5.5",
     "react": "^18",
     "react-dom": "^18",
-    "next": "13.5.5"
+    "styled-components": "^6.1.0"
   },
   "devDependencies": {
+    "babel-loader": "^9.1.3",
+    "babel-plugin-macros": "^3.1.0",
+    "babel-plugin-styled-components": "^2.1.4",
     "eslint": "^8",
-    "eslint-config-next": "13.5.5"
+    "eslint-config-next": "13.5.5",
+    "tailwindcss": "^3.3.3",
+    "twin.macro": "^3.4.0"
   }
 }
